upload order page fixed and minor ui bug fixes

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-3 mt-4 mt-lg-0 offset-lg-2 px-0">
-            <div class="shadow-sm p-2 sticky-top" style="top:82px">
+            <div class="shadow-sm p-2 sticky-top summary-div">
                 <h4 class="text-muted">Order Summary</h4>
                 <hr>
                 <div class="d-flex justify-content-between">
