--- a/src/app/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/components/confirmation-modal/confirmation-modal.component.html
@@ -2,7 +2,9 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Remove Confirmation</h5>
+                <h5 class="modal-title align-items-center d-flex"><span class="material-icons text-warning me-2">
+                    warning
+                    </span> Remove Confirmation</h5>
                 <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
             </div>
             <div class="modal-body">
