--- a/src/app/utils/product-card/product-card.component.html
+++ b/src/app/utils/product-card/product-card.component.html
@@ -5,5 +5,5 @@
         <h5 class="card-title text-muted">Macbook M1 Pro</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
-    </div><div></div>
+    </div>
   </div>
