--- a/src/app/components/toast/toast.component.html
+++ b/src/app/components/toast/toast.component.html
@@ -1,21 +1,27 @@
 <div class="toast-container position-fixed end-0 p-3" style="top:67px">
-    <div id="successToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3000" #successToast>
-      <div class="d-flex">
-        <div class="toast-body">
-          {{successMessage}}
-        </div>
-        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+  <div id="successToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive"
+    aria-atomic="true" data-bs-delay="3000" #successToast>
+    <div class="d-flex">
+      <div class="align-items-center d-flex gap-2 toast-body"><span class="material-symbols-outlined">
+          check_circle
+        </span> {{successMessage}}
       </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+        aria-label="Close"></button>
     </div>
   </div>
+</div>
 
 <div class="toast-container position-fixed end-0 p-3" style="top:67px">
-    <div id="errorToast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false" #errorToast>
-      <div class="d-flex">
-        <div class="toast-body">
-          {{errorMessage}}
-        </div>
-        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+  <div id="errorToast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive"
+    aria-atomic="true" data-bs-autohide="false" #errorToast>
+    <div class="d-flex">
+      <div class="align-items-center d-flex gap-2 toast-body"><span class="material-symbols-outlined">
+          error
+        </span> {{errorMessage}}
       </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+        aria-label="Close"></button>
     </div>
   </div>
+</div>
