--- a/src/app/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/components/confirmation-modal/confirmation-modal.component.html
@@ -1,10 +1,12 @@
-<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" #confirmRemoveModal>
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+    #confirmRemoveModal>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title align-items-center d-flex"><span class="material-icons text-warning me-2">
-                    warning
-                    </span> Remove Confirmation</h5>
+                <h5 class="modal-title align-items-center d-flex">
+                    <span class="material-icons text-warning me-2">warning</span> 
+                    Remove Confirmation
+                </h5>
                 <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
             </div>
             <div class="modal-body">
@@ -14,7 +16,8 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                    (click)="removeFromCartHandler(product.id)">Confirm</button>
+                    (click)="removeFromCartHandler(product.id)">Confirm
+                </button>
             </div>
         </div>
     </div>
