--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,77 +1,7 @@
 <div class="container-fluid pt-2">
   <div class="row">
     <div class="col-2 d-none d-lg-block">
-      <div class="d-flex justify-content-between">
-        <h4 class="mb-3">Filters</h4> <button class="btn btn-blue p-1 h-fit" (click)="clearFilters()"><span
-            class="material-symbols-outlined fs-5">
-            filter_alt_off
-          </span></button>
-      </div>
-      <h6 class="text-muted text-uppercase">Price Range</h6>
-      <div>
-        <div class="d-flex align-items-baseline">
-          <div class="col-5">
-            <div class="mb-3">
-              <!-- <label for="min-price" class="form-label">Min</label> -->
-              <input class="form-control border-0 shadow-sm" id="min-price" placeholder="Min"
-                (keyup)="changeMinPrice($event)" value="{{filters.minPrice != intMin ? filters.minPrice : ''}}">
-            </div>
-          </div>
-          <div class="col d-flex">
-            <div class="mx-auto h-fit"> to </div>
-          </div>
-          <div class="col-5">
-            <div class="mb-3">
-              <!-- <label for="max-price" class="form-label">Max</label> -->
-              <input class="form-control border-0 shadow-sm" id="max-price" placeholder="Max"
-                (keyup)="changeMaxPrice($event)" value="{{filters.maxPrice!=intMax ? filters.maxPrice : ''}}">
-            </div>
-          </div>
-        </div>
-        <small class="text-danger" *ngIf="priceFilterError()">{{priceFilterErrorMessage}}</small>
-      </div>
-      <h6 class="text-muted text-uppercase mt-3">Ratings</h6>
-      <form (change)="ratingChangeHandler($event)">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="rating" id="4-star" value="4"
-            [checked]="filters.rating==4">
-          <label class="form-check-label" for="4-star">
-            4★ & above
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="rating" id="3-star" value="3"
-            [checked]="filters.rating==3">
-          <label class="form-check-label" for="3-star">
-            3★ & above
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="rating" id="2-star" value="2"
-            [checked]="filters.rating==2">
-          <label class="form-check-label" for="2-star">
-            2★ & above
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="rating" id="1-star" value="1"
-            [checked]="filters.rating==1">
-          <label class="form-check-label" for="1-star">
-            1★ & above
-          </label>
-        </div>
-      </form>
-
-      <h6 class="text-muted text-uppercase mt-4">Brands</h6>
-      <form (change)="brandChangeHandler($event)">
-        <div class="form-check" *ngFor="let brand of allBrands">
-          <input class="form-check-input" type="checkbox" name="{{brand}}" value="{{brand}}"
-            [checked]="filters.brands.includes(brand)">
-          <label class="form-check-label" for="apple">
-            {{brand}}
-          </label>
-        </div>
-      </form>
+      <app-filter [allBrands]="allBrands" [intMin]="intMin" [intMax]="intMax"></app-filter>
     </div>
     <div class="col-12 col-lg-10">
       <div class="d-flex justify-content-between justify-content-lg-end filters">
@@ -150,68 +80,17 @@
   </div>
 
   <ng-template #content let-offcanvas>
-    <div class="offcanvas-header shadow-sm sticky-top">
+    <!-- <div class="offcanvas-header shadow-sm sticky-top">
       <h4 class="offcanvas-title" id="offcanvas-basic-title">Filters</h4>
       <button type="button" class="btn-close no-border-on-focus" aria-label="Close"
         (click)="offcanvas.dismiss()"></button>
-    </div>
+    </div> -->
     <div class="offcanvas-body">
-      <h6 class="text-muted text-uppercase">Price Range</h6>
-      <div class="d-flex align-items-baseline">
-        <div class="col-5">
-          <div class="form-floating mb-3">
-            <input class="form-control" id="min-price" placeholder="-">
-            <label for="min-price">Min</label>
-          </div>
-        </div>
-        <div class="col d-flex">
-          <div class="mx-auto h-fit"> to </div>
-        </div>
-        <div class="col-5">
-          <div class="form-floating mb-3">
-            <input class="form-control" id="max-price" placeholder="-">
-            <label for="max-price">Max</label>
-          </div>
-        </div>
-      </div>
-
-      <h6 class="text-muted text-uppercase mt-3">Ratings</h6>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="rating" id="4-star">
-        <label class="form-check-label" for="4-star">
-          4★ & above
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="rating" id="3-star">
-        <label class="form-check-label" for="3-star">
-          3★ & above
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="rating" id="2-star">
-        <label class="form-check-label" for="2-star">
-          2★ & above
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="rating" id="1-star">
-        <label class="form-check-label" for="1-star">
-          1★ & above
-        </label>
-      </div>
-
-      <h6 class="text-muted text-uppercase mt-4">Brands</h6>
-      <div class="form-check" *ngFor="let brand of allBrands">
-        <input class="form-check-input" type="checkbox" name="{{brand}}" value="{{brand}}">
-        <label class="form-check-label" for="{{brand}}">
-          {{brand}}
-        </label>
-      </div>
+      <app-filter [allBrands]="allBrands" [intMin]="intMin" [intMax]="intMax"></app-filter>
     </div>
 
-    <div class="offcanvas-footer text-end pe-4 pb-2">
+    <!-- <div class="offcanvas-footer text-end pe-4 pb-2">
       <button class="btn btn-secondary">Reset</button>
       <button class="btn btn-red ms-2">Apply</button>
-    </div>
+    </div> -->
   </ng-template>
