--- a/src/app/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/components/confirmation-modal/confirmation-modal.component.html
@@ -1,5 +1,4 @@
-<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-    #confirmRemoveModal>
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -22,3 +21,5 @@
         </div>
     </div>
 </div>
+
+<button class="d-none position-absolute" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" #modalToggleBtn></button>
