--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,2 +1,5 @@
-<h1>ERROR 404</h1>
-<h3>Page not found!! :( </h3> 
+<div class="container-fluid text-center">
+    <img src="../../../assets/images/404-error.png" alt="404" class="img-404">
+    <h2>Page not found! :( </h2>
+    <a routerLink="/" class="text-decoration-none link">Go to homepage</a>
+</div>
