--- a/src/app/components/toast/toast.component.html
+++ b/src/app/components/toast/toast.component.html
@@ -25,3 +25,5 @@
     </div>
   </div>
 </div>
+
+<button class="d-none position-absolute" data-bs-toggle="toast" data-bs-target="#successToast" #successToastToggleBtn>Click</button>
