--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -1,6 +1,6 @@
 <div class="row align-items-center gap-4">
   <div class="col-12 col-md-5 ms-3">
-    <form class="" #uploadForm="ngForm" (ngSubmit)="submitHandler(uploadForm.value)">
+    <form class="" #uploadForm="ngForm">
       <h4>Upload Orders</h4>
       <div class="d-flex mb-2 mt-3">
         <input #fileInput="ngModel" (change)="changeHandler($event)" type="file" accept="text/csv"
@@ -14,15 +14,15 @@
     <div class="col-12 col-lg-8">
       <div class="row shadow-sm mb-2" *ngFor="let item of fileData">
         <div class="col-12 col-sm-4 text-center"><img class="img-aspect p-1 rounded-2 c-pointer"
-            src="{{item.product.thumbnail}}" alt="{{item.product.title}}" height="220px"
+            src="{{item?.product?.thumbnail}}" alt="{{item?.product?.title}}" height="220px"
             (click)="openProduct(item.product.id)">
         </div>
         <div class="col-12 col-sm-8 py-3 position-relative">
-          <h6 class="text-muted mb-0 c-pointer" (click)="openProduct(item.product.id)">{{item.product.brand}}</h6>
-          <h5 class="mb-0 c-pointer" (click)="openProduct(item.product.id)">{{item.product.title}}</h5>
-          <p class="mb-2 opacity-75 one-liner">{{item.product.description}}
+          <h6 class="text-muted mb-0 c-pointer" (click)="openProduct(item.product.id)">{{item?.product?.brand}}</h6>
+          <h5 class="mb-0 c-pointer" (click)="openProduct(item.product.id)">{{item?.product?.title}}</h5>
+          <p class="mb-2 opacity-75 one-liner">{{item?.product?.description}}
           </p>
-          <h5 class="d-inline-block me-2 fw-normal">{{item.product.price | currency: 'INR'}}</h5>
+          <h5 class="d-inline-block me-2 fw-normal">{{item?.product?.price | currency: 'INR'}}</h5>
           <div class="input-group mb-3">
             <button class="btn btn-outline-red border-end-0 px-2" (click)="decreaseQuantityHandler(item.product.id)">
               <span class="material-symbols-outlined">
@@ -31,7 +31,7 @@
             </button>
             <input type="text"
               class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
-              value="{{item.quantity}}" (keyup)="updateQuantityHandler(item.product.id, $event)"
+              value="{{item?.quantity}}" (keyup)="updateQuantityHandler(item.product.id, $event)"
               (blur)="refreshQuantity(item.product.id, $event)" aria-describedby="button-addon1">
             <button class="btn btn-outline-red border-start-0 px-2" (click)="increaseQuantityHandler(item.product.id)">
               <span class="material-symbols-outlined">
@@ -63,8 +63,8 @@
         </div>
         <div class="d-flex justify-content-between">
           <div [ngClass]="summary.deliveryCharges == 0 ? 'text-success':''">Delivery Charges</div>
-          <div *ngIf="summary.deliveryCharges != 0">{{summary.deliveryCharges | currency:'INR'}}</div>
-          <div *ngIf="summary.deliveryCharges == 0" class="text-success">FREE <span
+          <div *ngIf="summary?.deliveryCharges != 0">{{summary.deliveryCharges | currency:'INR'}}</div>
+          <div *ngIf="summary?.deliveryCharges == 0" class="text-success">FREE <span
               class="text-decoration-line-through">₹49.00</span></div>
         </div>
         <hr>
@@ -82,7 +82,7 @@
   </div>
 
   <ng-template #noOrder>
-    <ng-container *ngIf="errorData.length>0; else noPreview">
+    <ng-container *ngIf="errorData?.length>0; else noPreview">
       <div class="col-12 col-lg-7 ms-3">
         <h4>Errors</h4>
         <table class="table text-danger shadow-sm table-bordered">
@@ -94,8 +94,8 @@
           </thead>
           <tbody>
             <tr *ngFor="let error of errorData">
-              <th scope="row">{{error.row}}</th>
-              <td>{{error.message}}</td>
+              <th scope="row">{{error?.row}}</th>
+              <td>{{error?.message}}</td>
             </tr>
           </tbody>
         </table>
@@ -104,7 +104,7 @@
   </ng-template>
 
   <ng-template #noPreview>
-    <ng-container *ngIf="orderItems.length==0; else orderPlaced">
+    <ng-container *ngIf="orderItems?.length==0; else orderPlaced">
       <div class="container-fluid text-center pt-5 opacity-50">
         <img src="../../../assets/images/file-preview.svg" alt="no items" style="height:30vh; max-width: 80vw;"
           class="mb-2 rounded-2">
@@ -145,3 +145,5 @@
     </div>
   </div>
 </div>
+
+<button class="d-none position-absolute" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" #modalToggleBtn></button>
